--- a/notebooks/deliver/2021-03-03-gc-profile-benchmarking.html
+++ b/notebooks/deliver/2021-03-03-gc-profile-benchmarking.html
@@ -13182,6 +13182,50 @@ div#notebook {
 
 
 <div class="output_subarea output_stream output_stdout output_text">
+<pre>Preprocessing train dataset for pos2gram_counter
+</pre>
+</div>
+</div>
+
+<div class="output_area">
+
+    <div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stderr output_text">
+<pre>100%|##########| 238088/238088 [24:22&lt;00:00, 162.85it/s]
+</pre>
+</div>
+</div>
+
+<div class="output_area">
+
+    <div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>Preprocessing valid dataset for pos2gram_counter
+</pre>
+</div>
+</div>
+
+<div class="output_area">
+
+    <div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stderr output_text">
+<pre>100%|##########| 58833/58833 [06:35&lt;00:00, 148.57it/s]
+</pre>
+</div>
+</div>
+
+<div class="output_area">
+
+    <div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stdout output_text">
 <pre>Preprocessing train dataset for function_word_counter
 </pre>
 </div>
@@ -13193,7 +13237,7 @@ div#notebook {
 
 
 <div class="output_subarea output_stream output_stderr output_text">
-<pre>100%|██████████| 147807/147807 [00:23&lt;00:00, 6213.03it/s]
+<pre>100%|##########| 238088/238088 [00:46&lt;00:00, 5104.86it/s]
 </pre>
 </div>
 </div>
@@ -13215,7 +13259,7 @@ div#notebook {
 
 
 <div class="output_subarea output_stream output_stderr output_text">
-<pre>100%|██████████| 149114/149114 [00:23&lt;00:00, 6259.57it/s]
+<pre>100%|##########| 58833/58833 [00:11&lt;00:00, 5170.17it/s]
 </pre>
 </div>
 </div>
